[project]
name = "securityauthapi-integration-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Camilo Palacio Alvarez"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "my-package (>=0.0.0,<0.0.1)",
    "secure-auth-api @ git+https://${GITHUB_TOKEN}@github.com/camilo199217/secure-auth-api.git@main",
    "uvicorn[standard] (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
